@@ -1,3 +1,5 @@
 ToDo
 R/crossvalidation.R
+R/memory.R
 inst/RR
+tests/Node-regtest
